# subxt-gen

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/v12/: call.rs  event.rs  mod.rs  store.rs
